# autobot

./: CMakeLists.txt  mod.json
.circleci/: config.yml
.github/workflows/: build-ios.yml  build.yml
src/: main.cpp
